<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="app.com.example.android.myappportfolio.MainActivity">

   <!-- <TextView
        android:text="Hello World!"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_title"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn1"
        android:id="@+id/button1"
        android:width="200dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView"
        android:background="@drawable/selector"
        android:onClick="SendMessage"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn2"
        android:id="@+id/button2"
        android:width="200dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button1"
        android:background="@drawable/selector"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn3"
        android:id="@+id/button3"
        android:width="200dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button2"
        android:background="@drawable/selector"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn4"
        android:id="@+id/button4"
        android:width="200dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button3"
        android:background="@drawable/selector"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn5"
        android:id="@+id/button5"
        android:width="200dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button4"
        android:background="@drawable/selector"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn6"
        android:id="@+id/button6"
        android:width="200dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button5"
        android:background="@drawable/selector"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
